# davinci-cors

./: API.md  README.md  Roadmap.md  tests.md
react-frontend/: Dockerfile  package.json  searchforuserservice.regex  tsconfig.json
react-frontend/nginx/: nginx.conf
react-frontend/public/: index.html
react-frontend/src/: App.tsx
react-frontend/src/data/class/: Class.ts
react-frontend/src/data/event/: Event.ts  EventType.ts
react-frontend/src/data/timetable/: Lesson.ts  TimeTable.ts  TimetableDay.ts
react-frontend/src/data/user/: Member.ts  MemberRole.ts  User.ts  UserRole.ts
react-frontend/src/mockup/: ClassMockUp.ts  EventMockup.ts  TimeTableMockUp.ts
react-frontend/src/service/: AxiosInstance.ts  ClassRequest.ts  DiscordRequest.ts  DiscordRequests.ts  EventRequest.ts  EventType.ts  MemberRequest.ts  TimetableRequest.ts  UserRequest.ts  UserService.ts
react-frontend/src/site/: Account.tsx  MainSite.tsx  Router.tsx  SiteNav.tsx
react-frontend/src/site/account/: AcceptPendingMembers.tsx  Account.tsx  ChangeEmail.tsx  ChangePassword.tsx  LinkDiscord.tsx  RequestToJoin.tsx
react-frontend/src/site/createclass/: CreateClass.tsx  CreatePopup.tsx
react-frontend/src/site/login/: Login.tsx  SignUp.tsx
react-frontend/src/site/mainsite/: ClassList.tsx  MainSite.tsx  useClassContext.ts
react-frontend/src/site/mainsite/currentClass/: ClassInfo.tsx  ClassList.tsx  ClassView.tsx  Events.tsx  Timetable.tsx
react-frontend/src/site/mainsite/currentClass/adminPanel/: AdminPanel.tsx  BannedMembers.tsx  ChangeClassName.tsx  ChangeClassSettings.tsx  NewEvent.tsx  NewLesson.tsx  PendingMembers.tsx
react-frontend/src/site/mainsite/currentClass/adminPanel/classsettings/: ChangeClassDescription.tsx  ChangeClassName.tsx  CopyLink.tsx  LinkWithDiscord.tsx
react-frontend/src/site/mainsite/currentClass/adminPanel/classsettings/deleteclass/: DeleteClass.tsx  DeleteClassPopup.tsx
react-frontend/src/site/mainsite/currentClass/adminPanel/edituser/: EditUserPopUp.tsx  Members.tsx
react-frontend/src/site/mainsite/currentClass/calendar/: Calendar.tsx  CreateEventPopup.tsx  EventPopup.tsx
react-frontend/src/site/mainsite/currentClass/timetable/: TimeTableDay.tsx  Timetable.tsx
react-frontend/src/site/mainsite/currentClass/wielangenoch/: WieLangeNoch.tsx
react-frontend/src/site/settings/: ChangeName.tsx  Settings.tsx
react-frontend/src/site/settings/leaveclass/: LeaveClass.tsx  LeaveClassPopUp.tsx
rust/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.bot  Dockerfile.server  InitialCreate.sql
rust/bot/: .gitignore  Cargo.toml  Dockerfile  README.md  commands.md
rust/bot/src/: error.rs  functions.rs  main.rs  notifications.rs  requests.rs
rust/bot/src/commands/: events.rs  functions.rs  mod.rs  settings.rs  setup.rs  setup_command.rs  stundenplan.rs
rust/dao/: Cargo.toml
rust/dao/src/: lib.rs
rust/dto/: Cargo.toml
rust/dto/src/: lib.rs
rust/server/: .env  Cargo.toml  Dockerfile  Dockfe.txt  Makefile.toml  README.md  version
rust/server/migrations/2021-07-19-115842_initialize-db/: down.sql  up.sql
rust/server/migrations/2021-07-22-115336_create_cors_role/: down.sql  up.sql
rust/server/migrations/2021-07-22-132637_store-snowflakes/: down.sql  up.sql
rust/server/migrations/2021-07-27-111125_more-guild-data/: down.sql  up.sql
rust/server/migrations/2021-07-29-091618_user-token-version/: down.sql  up.sql
rust/server/migrations/2021-07-29-145209_ban-members/: down.sql  up.sql
rust/server/src/: error.rs  main.rs  models.rs  schema.rs
rust/server/src/actions/: class.rs  event.rs  get_notifications.sql  mod.rs  user.rs
rust/server/src/handlers/: auth.rs  class.rs  extractors.rs  mod.rs
