[package]
name = "dto"
version = "0.1.0"
authors = ["Nilstrieb <48135649+Nilstrieb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }