[package]
name = "server"
version = "0.1.0"
authors = ["Nilstrieb <48135649+Nilstrieb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dao = { path = "../dao" }
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
jsonwebtoken = "7.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }