[package]
name = "server"
version = "0.1.0"
authors = ["Nilstrieb <48135649+Nilstrieb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dto = { path = "../dto" }
actix-rt = "1.0.0"
actix-web = "3.0.0"
actix-http = "3.0.0-beta.8"
actix-web-httpauth = "0.5.1"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
jsonwebtoken = "7.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-cors = "0.5.4"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
color-eyre = "0.5.11"
